2007-09-27  Sven Neumann  <sven@gimp.org>

	* plug-ins/script-fu/scripts/add-bevel.scm: fixed GimpImageType
	parameter passed to gimp-layer-new. Do not register the script for
	grayscale images, it doesn't handle them properly.

2007-09-27  Sven Neumann  <sven@gimp.org>

	* plug-ins/script-fu/scheme-wrapper.c: unified error
	messages, removed trailing newlines.

2007-09-26  Sven Neumann  <sven@gimp.org>

	* plug-ins/common/lcms.c: don't create nested undo groups.

2007-09-26  Sven Neumann  <sven@gimp.org>

	* app/core/gimpimageundo.c (gimp_image_undo_pop): call
	gimp_color_managed_profile_changed() if an icc-profile is attached
	or removed from an image by an undo operation (bug #475983).

2007-09-26  Simon Budig  <simon@gimp.org>

	* app/display/gimpdisplayshell-render.c: fix the numerical overflow
	for the new box-filtering stuff.

	Fixes bug #479807.

2007-09-26  Sven Neumann  <sven@gimp.org>

	* plug-ins/maze/maze_face.c (maze_dialog): use separate variables
	for width and height entry. Fixes bug #480303.

2007-09-26  Sven Neumann  <sven@gimp.org>

	* app/widgets/gimpcontrollerwheel.c (gimp_controller_wheel_scroll):
	fixed check for modifier keys and always return on a matched
	event (bug #480319). Also reordered the list of events as the code
	does not any longer rely on a certain order.

2007-09-26  Sven Neumann  <sven@gimp.org>

	* plug-ins/maze/maze_face.c: minor cleanup, removed unused code.

2007-09-25  Sven Neumann  <sven@gimp.org>

	* app/widgets/gimpmessagebox.c (gimp_message_box_constructor):
	left-align the image.

	* app/actions/data-commands.c
	* app/actions/documents-commands.c
	* app/actions/file-commands.c
	* app/actions/templates-commands.c: use more meaningful stock
	icons for message dialogs.

2007-09-25  Sven Neumann  <sven@gimp.org>

	* plug-ins/common/decompose.c: reverted "fix" for bug #477008.

	* tools/pdbgen/pdb/display.pdb
	* app/pdb/display_cmds.c: flush the image before creating a new